--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 cmake_minimum_required( VERSION 2.6 )
 
-project( CALCIUM )
+project( CORAL_CALCIUM )
 
 ################################################################################
 # Setup Coral
